--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,31 +1,65 @@
 @use "sass:math";
- /* Clase7-pt4 Lists
-  Funciones de listas
-
-  nth($list,index)recuperar un valor de una lista
-  lenght($list)nos devuelve la longitud de la lista, el numero de elementos que tiene
-
-  join($list1,$list2) -> concatena listas
-    usa el separador del primer argumento
-    o se puede especificar el separador
-    como tercer argumento (comma | space)
-
-  append($list,value,[separator])[]opcional, append sirve para añadir un nuevo elemento a una lista
-
-  zip($list1,$list2)
-    Crea una lista multidimensional con las
-    listas pasadas como argumentos
-
+ /* Clase7-pt5
+Funciones para mapas
+  map-get($map,$key)recorre el mapa y devuelve un valor
+  map-keys($map);devuelve las claves,una lista
+  map-values($map);devuelve los valores
+  map-has-key($map,$key)permite determinar si un mapa tiene o no tiene una clave adentro
+  map-merge($map1,$map2)se usa para juntar mapas
+  k= de key 
+  v=value
 */
 
-$colors: red green blue;
-$letters: 'a', 'b', 'c';
-$colors-letters: zip($colors,$letters);
+$map1: (
+  k1: v1,
+  k2: v2
+);
 
-.lists {
-  $local-colors: append($colors,yellow);
-  join: join($colors,$letters,space);
-  colors: $local-colors;
-  colors-letters: nth(nth($colors-letters,2),2);
-  colors-letters-2: inspect($colors-letters);
+$map2: (
+  k-1: v-1,
+  k-2: v-2
+);
+
+$map3: map-merge($map1,$map2);
+
+.map {
+  map-merge: inspect($map3);
+  map-keys: map-keys($map3);
+  map-values: map-values($map3);
+}
+
+@function em($el,$parent:16px){
+  @return ($el / $parent) * 1em;
+}
+
+
+// Ejemplo map-has-key
+$breakpoints: (
+  small: em(360px),
+  medium: em(768px),
+  large: em(1024px),
+  x-large: em(1400px)
+);
+
+@mixin from($breakpoint){
+  @if map-has-key($breakpoints,$breakpoint){
+    @media screen and (min-width: map-get($breakpoints,$breakpoint)){
+      @content;
+    }
+  } @else {
+    @media screen and (min-width: $breakpoint) {
+      @content;
+    }
+  }
+}
+
+.box {
+  color: red;
+  @include from(large) {
+    color: yellow;
+  }
+
+  @include from(em(525px)){
+    color: green;
+  }
 }
